--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "mongoose": "^6.10.0",
     "mongoose-encryption": "^2.1.2",
     "mongoose-findorcreate": "^4.0.0",
+    "nodemon": "^3.0.1",
     "passport": "^0.6.0",
     "passport-google-oauth20": "^2.0.0",
     "passport-local": "^1.0.0",
